Fix: reduce padding and truncate text

--- a/frontend/src/components/UserCard/index.module.css
+++ b/frontend/src/components/UserCard/index.module.css
@@ -1,5 +1,5 @@
 .userCardContainer {
-  @apply w-full px-4 py-2 flex flex-row items-center gap-4 hover:bg-secondary hover:cursor-pointer;
+  @apply w-full p-2 flex flex-row items-center gap-x-2 hover:bg-secondary hover:cursor-pointer;
 }
 
 .avatar {
@@ -7,13 +7,13 @@
 }
 
 .userInfo {
-  @apply flex-1;
+  @apply flex-1 truncate;
 }
 
 .userName {
-  @apply text-sm text-primary-text-1;
+  @apply text-sm text-primary-text-1 truncate;
 }
 
 .userEmail {
-  @apply text-xs text-accent-2;
+  @apply text-xs text-accent-2 truncate;
 }
